# new-linux

./: .back.log.swp  .gitignore  .tmux.conf  Cargo.toml  Dockerfile  Makefile  README.md  bashrc_addon  script1.sh  server.conf  testscript.sh
pki/own/: cert.der
pki/private/: private.pem
src/: main.rs
